Fix alignment of slides and dots

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -235,7 +235,6 @@ a {
 
 .embla {
   position: relative;
-  max-width: 670px;
 }
 
 .embla__viewport {
@@ -258,7 +257,6 @@ a {
   -webkit-touch-callout: none;
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
-  margin-left: -10px;
 }
 
 .embla__slide {
